--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,8 @@
      "output_type": "stream",
      "text": [
       "120\n",
-      "46\n",
-      "請輸入收縮壓 120 請輸入舒張壓 46\n",
+      "70\n",
+      "請輸入收縮壓 120 請輸入舒張壓 70\n",
       "請輸入有效的血壓數值\n"
      ]
     }
@@ -73,10 +73,10 @@
     "if sbp < 120 and dbp < 80:\n",
     "  message = \"正常\"\n",
     "  \n",
-    "elif sbp < 129 and dbp < 80:\n",
+    "elif sbp <= 129 and dbp < 80:\n",
     "    message = \"血壓升高\"\n",
     "    \n",
-    "elif sbp < 139 or dbp < 89:\n",
+    "elif sbp <= 139 or dbp <= 89:\n",
     "    \n",
     "    message = \"高血壓一期\" \n",
     "else:\n",
