--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -93,6 +93,47 @@
     "print(message) \n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入收縮壓140\n",
+      "請輸入舒張壓78\n"
+     ]
+    }
+   ],
+   "source": [
+    "#老師的答案\n",
+    "\n",
+    "import pyinputplus as pyip\n",
+    "\n",
+    "sbp = pyip.inputInt(prompt=\"請輸入收縮壓\")\n",
+    "print(sbp)\n",
+    "dbp = pyip.inputInt(prompt=\"請輸入舒張壓\") \n",
+    "print(dbp)\n",
+    "\n",
+    "status = \"\"\n",
+    "if sbp < 120 and dbp < 80:\n",
+    "    status= '正常'\n",
+    "elif sbp < 130 and dbp < 80:\n",
+    "    status = '血壓升高'\n",
+    "elif sbp >= 130 and dbp< 80:    \n",
+    "    status ='單純收縮高血壓'   \n",
+    "elif sbp < 140 or (dbp>=80 and dbp <90):\n",
+    "    status = '高血壓一期'\n",
+    "elif  sbp >= 140 or dbp >= 90:\n",
+    "    status = '高血壓二期'\n",
+    "    \n",
+    " \n",
+    "    \n",
+    "    print(status)\n"
+   ]
   }
  ],
  "metadata": {
