--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -127,7 +127,7 @@
     "    status ='單純收縮高血壓'   \n",
     "elif sbp < 140 or (dbp>=80 and dbp <90):\n",
     "    status = '高血壓一期'\n",
-    "elif  sbp >= 140 or dbp >= 90:\n",
+    "else  sbp >= 140 or dbp >= 90:\n",
     "    status = '高血壓二期'\n",
     "    \n",
     " \n",
