--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入身高cm:180\n",
-      "請輸入體重kg:90\n",
-      "27.777777777777775 您的體重過重\n"
+      "請輸入身高cm:190\n",
+      "請輸入體重kg:40\n",
+      "11.0803324099723 您的體重過重\n"
      ]
     }
    ],
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120\n",
-      "70\n",
-      "請輸入收縮壓 120 請輸入舒張壓 70\n",
-      "請輸入有效的血壓數值\n"
+      "140\n",
+      "90\n",
+      "請輸入收縮壓: 140 請輸入舒張壓: 90\n",
+      "高血壓二期\n"
      ]
     }
    ],
@@ -85,18 +85,16 @@
     "if sbp > 130 and dbp < 80 :\n",
     "    message =\"單純收縮期高血壓\"   \n",
     "     \n",
-    "else:\n",
-    "    message = \"請輸入有效的血壓數值\"\n",
+    "\n",
     "        \n",
-    "        \n",
-    "print('請輸入收縮壓',sbp,'請輸入舒張壓',dbp)\n",
+    "print('請輸入收縮壓:',sbp,'請輸入舒張壓:',dbp)\n",
     "print(message) \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +102,9 @@
      "output_type": "stream",
      "text": [
       "請輸入收縮壓140\n",
-      "請輸入舒張壓78\n"
+      "請輸入舒張壓90\n",
+      "高血壓二期\n",
+      "請輸入收縮壓: 140 請輸入舒張壓: 90\n"
      ]
     }
    ],
@@ -127,12 +127,14 @@
     "    status ='單純收縮高血壓'   \n",
     "elif sbp < 140 or (dbp>=80 and dbp <90):\n",
     "    status = '高血壓一期'\n",
-    "else  sbp >= 140 or dbp >= 90:\n",
+    "else:\n",
+    "    sbp >= 140 or dbp >= 90 \n",
     "    status = '高血壓二期'\n",
     "    \n",
     " \n",
     "    \n",
-    "    print(status)\n"
+    "    print(status)\n",
+    "    print('請輸入收縮壓:',sbp,'請輸入舒張壓:',dbp)\n"
    ]
   }
  ],
