--- a/2023.09.11/2023.09.20BMI.ipynb
+++ b/2023.09.11/2023.09.20BMI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "請輸入身高cm:190\n",
-      "請輸入體重kg:40\n",
-      "11.0803324099723 您的體重過重\n"
+      "請輸入體重kg:90\n",
+      "24.930747922437675 正常\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "    message = \"肥胖\"\n",
     "    \n",
     "\n",
-    "print(bmi,'您的體重過重',)  \n",
+    "print(bmi,message)  \n",
     "\n",
     "        \n",
     "    "
