--- a/Lessoon08.ipynb
+++ b/Lessoon08.ipynb
@@ -290,7 +290,59 @@
     "a = 0\n",
     "for i in range(1,101):\n",
     "    a += i\n",
-    "    print(a )"
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1+100=5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1~100加總 老師的答案\n",
+    "total = 0\n",
+    "for i in range(1,101):\n",
+    "    total += i\n",
+    "print(f\"1+100={total}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入起始值0\n",
+      "請輸入結束值101\n",
+      "0~101=5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1~100加總 老師的答案\n",
+    "import pyinputplus as pyip\n",
+    "\n",
+    "start =  pyip.inputInt(prompt=\"請輸入起始值\")\n",
+    "print(start)\n",
+    "end =  pyip.inputInt(prompt=\"請輸入結束值\")\n",
+    "print(end)\n",
+    "\n",
+    "\n",
+    "total = 0\n",
+    "for i in range(1,101):\n",
+    "    total += i\n",
+    "print(f\"{start}~{end}={total}\")"
    ]
   },
   {
