--- a/Lessoon08.ipynb
+++ b/Lessoon08.ipynb
@@ -347,6 +347,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    display(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i=1\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=2\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=3\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=4\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=5\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=6\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=7\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=8\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n",
+      "i=9\n",
+      "j=1,j=2,j=3,j=4,j=5,j=6,j=7,j=8,j=9,\n"
+     ]
+    }
+   ],
+   "source": [
+    "#巢狀迴圈 （內部,外部）\n",
+    "for i in range(1,10):\n",
+    "    print(f\"i={i}\")\n",
+    "    for j in range (1,10):\n",
+    "        print(f\"j={j}\",end=',')\n",
+    "    print()    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
