--- a/Lessoon08.ipynb
+++ b/Lessoon08.ipynb
@@ -508,6 +508,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成年\n"
+     ]
+    }
+   ],
+   "source": [
+    "#trun\n",
+    "age = 18\n",
+    "if age >=18: \n",
+    "    print(\"成年\")\n",
+    "else:\n",
+    "    print(\"未成年\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成年\n"
+     ]
+    }
+   ],
+   "source": [
+    "#改變程式區塊加 not 就變成false\n",
+    "#沒有加not 就是bool（trun）\n",
+    "#false\n",
+    "age = 18\n",
+    "if  not (age >=18): \n",
+    "    print(\"未成年\")\n",
+    "else:\n",
+    "    print(\"成年\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#false and if單一選項直接忽略 不作答\n",
+    "#trun and false 選擇一個答\n",
+    "age = 18\n",
+    "if  not (age >=18): \n",
+    "    print(\"未成年\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1~10:55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "total = 0\n",
+    "while n <= 10:\n",
+    "    total += n\n",
+    "    n += 1\n",
+    "print(f\"1~10:{total}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
