--- a/Lessoon08.ipynb
+++ b/Lessoon08.ipynb
@@ -589,6 +589,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入起始值:1\n",
+      "請輸入結束值:3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyinputplus as pyip\n",
+    "start = pyip.inputInt(prompt=\"請輸入起始值:\")\n",
+    "print(start)\n",
+    "end = pyip.inputInt(prompt=\"請輸入結束值:\")\n",
+    "print(end)\n",
+    "total = 0\n",
+    "\n",
+    "while start <= end:\n",
+    "    total += start \n",
+    "    start += 1\n",
+    "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
