--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -6,9 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "求所有因數\n",
+    "#求所有因數\n",
+    "import  pyinputplus as pyip\n",
+    "\n",
     "num = int(input(\"請輸入整數，求所有因數:\"))\n",
-    "print(num,\"的因數:\")\n"
+    "\n",
+    "for i in range(1,nmu)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(num,\"的因數:\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -36,8 +53,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
