--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -39,6 +39,80 @@
     "   \n",
     "print(f\"恭喜！已經存夠了，總存款為：{month}月份總存款：{deposit}\")    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "#break 直接跳出\n",
+    "while(True):\n",
+    "    stuff = input(\"請輸入小寫英文字[按q會離開]:\")\n",
+    "    if stuff == 'q':\n",
+    "        break\n",
+    "    print(stuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不做動作,請重新輸入\n",
+      "不做動作,請重新輸入\n",
+      "9的平方是81\n"
+     ]
+    }
+   ],
+   "source": [
+    "#奇數輸出平方\n",
+    "#偶數不做任何動作\n",
+    "while(True):\n",
+    "    keyin = input(\"請輸入小寫英文字[按q會離開]:\")\n",
+    "    if keyin == 'q':\n",
+    "        break\n",
+    "    value = int (keyin)\n",
+    "    if value % 2 == 0:\n",
+    "        print(\"不做動作,請重新輸入\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(f\"{value}的平方是{value ** 2}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#奇數輸出平方\n",
+    "#偶數不做任何動作\n",
+    "while(True):\n",
+    "    keyin = input(\"請輸入整數,輸入[q]會離開]:\")\n",
+    "    if keyin == 'q':\n",
+    "        break\n",
+    "    value = int(keyin)\n",
+    "    if value % 2 == 0:\n",
+    "        print(\"不作動作,請重新輸入\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(f\"{value}的平方是{value ** 2}\")"
+   ]
   }
  ],
  "metadata": {
