--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -96,9 +96,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "豬頭,請輸入整數\n",
+      "豬頭,請輸入整數\n",
+      "豬頭,請輸入整數\n",
+      "豬頭,請輸入整數\n",
+      "9的平方是81\n"
+     ]
+    }
+   ],
    "source": [
     "#奇數輸出平方\n",
     "#偶數不做任何動作\n",
@@ -106,12 +125,20 @@
     "    keyin = input(\"請輸入整數,輸入[q]會離開]:\")\n",
     "    if keyin == 'q':\n",
     "        break\n",
-    "    value = int(keyin)\n",
-    "    if value % 2 == 0:\n",
-    "        print(\"不作動作,請重新輸入\")\n",
+    "    try:\n",
+    "        value = int(keyin)   #----> raise  \n",
+    "    except:\n",
+    "        print(\"豬頭,請輸入整數\")\n",
     "        continue\n",
     "    else:\n",
-    "        print(f\"{value}的平方是{value ** 2}\")"
+    " \n",
+    "        if value % 2 == 0:\n",
+    "            print(\"不作動作,請重新輸入\")\n",
+    "            continue\n",
+    "        else:\n",
+    "          print(f\"{value}的平方是{value ** 2}\")\n",
+    "    \n",
+    "          "
    ]
   }
  ],
