--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -2,29 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入整數，求所有因數:求25的因數\n",
+      "1\n",
+      "5\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "#求所有因數\n",
     "import  pyinputplus as pyip\n",
     "\n",
-    "num = int(input(\"請輸入整數，求所有因數:\"))\n",
+    "#num = int(input(\"請輸入整數，求所有因數:\"))\n",
+    "a = pyip.inputInt(prompt=\"請輸入整數，求所有因數:\")\n",
+    "print (f\"求{a}的因數\")\n",
     "\n",
-    "for i in range(1,nmu)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(num,\"的因數:\")\n",
-    "\n",
-    "\n",
-    "\n",
+    "for i in range(1,a+1):\n",
+    "    if a % i ==0:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        pass\n",
     "\n"
    ]
   },
@@ -34,10 +38,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "求公因數\n",
+    "#求公因數\n",
+    "\n",
+    "import\n",
     "print(\"請輸入2數,求2數公因數:\")\n",
     "n = int(input('請輸入第1個數:'))\n",
-    "m = int(input('請輸入第2個數:'))"
+    "m = int(input('請輸入第2個數:'))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -59,7 +67,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
   "orig_nbformat": 4
