--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -96,13 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -139,6 +132,38 @@
     "          print(f\"{value}的平方是{value ** 2}\")\n",
     "    \n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入整數，豬頭\n",
+      "請輸入整數，豬頭\n",
+      "請輸入整數，豬頭\n",
+      "請輸入整數，豬頭\n",
+      "請輸入整數，豬頭\n",
+      "請輸入整數，豬頭\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "while (True):\n",
+    "    try:\n",
+    "        input_value = int(input(\"請輸入整數\"))\n",
+    "    except:\n",
+    "        print(\"請輸入整數，豬頭\")\n",
+    "    else:\n",
+    "        print(input_value)\n",
+    "        break\n",
+    "     "
    ]
   }
  ],
