--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,25 +144,21 @@
      "output_type": "stream",
      "text": [
       "請輸入整數，豬頭\n",
-      "請輸入整數，豬頭\n",
-      "請輸入整數，豬頭\n",
-      "請輸入整數，豬頭\n",
-      "請輸入整數，豬頭\n",
-      "請輸入整數，豬頭\n",
-      "12\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "#請輸入整數豬頭 \n",
     "while (True):\n",
     "    try:\n",
     "        input_value = int(input(\"請輸入整數\"))\n",
     "    except:\n",
     "        print(\"請輸入整數，豬頭\")\n",
+    "        continue\n",
     "    else:\n",
     "        print(input_value)\n",
-    "        break\n",
+    "    break\n",
     "     "
    ]
   }
