--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "#請輸入整數豬頭 \n",
+    "#請輸入整數豬頭 -班長答案\n",
     "while (True):\n",
     "    try:\n",
     "        input_value = int(input(\"請輸入整數\"))\n",
@@ -159,6 +159,43 @@
     "    else:\n",
     "        print(input_value)\n",
     "    break\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anc請輸入整數，豬頭\n",
+      "apd請輸入整數，豬頭\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請輸入整數豬頭 -老師答案\n",
+    "while (True):\n",
+    "    try:\n",
+    "        \n",
+    "        key_in = input(\"請輸入整數\")\n",
+    "        value = int(key_in) \n",
+    "    except:\n",
+    "        print(f\"{key_in}請輸入整數，豬頭\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        if value<=20 and value >=10:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"數值必須在10~20之間\")\n",
+    "            continue\n",
+    "      \n",
+    "print(input_value)\n",
+    "    \n",
     "     "
    ]
   }
