--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -201,6 +201,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_int (prompt:str,max:int | None = None,min:int | None = None) -> int :\n",
+    "    while (True):\n",
+    "        try:\n",
+    "            key_in = input(\"prompt\")\n",
+    "            value = int(key_in) \n",
+    "        except:\n",
+    "            print(f\"{key_in}請輸入整數，豬頭\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            if max is not None and min is not None :\n",
+    "             if value <= max and value >=min:\n",
+    "                return value\n",
+    "            else:\n",
+    "              print(\"數值必須在10~20之間\")\n",
+    "              continue\n",
+    "    else:\n",
+    "            return value\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
