--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -227,10 +227,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#建立亂數\n",
+    "import random\n",
+    "random.randint(1,50)"
+   ]
   }
  ],
  "metadata": {
