--- a/Lesson09.ipynb
+++ b/Lesson09.ipynb
@@ -227,6 +227,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_int(prompt:str,max:int | None = None,min:int | None = None) -> int:\n",
+    "    while True:\n",
+    "        try:\n",
+    "            key_in = input(prompt)\n",
+    "            value = int(key_in)\n",
+    "        except:\n",
+    "            print(f\"{key_in}格式錯誤,請重新輸入\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            if max is not None and min is not None:\n",
+    "                if value<=max and value>=min:\n",
+    "                    return value\n",
+    "                else:\n",
+    "                    print(f\"數值必需在{min}~{max}之間\")    \n",
+    "                    continue\n",
+    "            else:\n",
+    "                return value\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = input_int(prompt=\"請輸入整數:\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a格式錯誤,請重新輸入\n",
+      "s格式錯誤,請重新輸入\n",
+      "數值必需在10~30之間\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = input_int(prompt=\"請輸入整數:\",max=30,min=10)\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
