--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -63,9 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3261930071.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    try:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "- 猜中要告知猜了幾次\n",
     "- 沒猜中要有提醒\n",
@@ -77,6 +86,15 @@
     "print(\"===============猜數字遊戲=================:\\n\")\n",
     "while(True):\n",
     "   keyin = input(f\"猜數字範圍{min}~{max}\")\n",
+    "   min += 1\n",
+    "   max += 100\n",
+    "  \n",
+    "    try:\n",
+    "     count < target:\n",
+    "          count=input(\"再小一點,您已經猜了1次\")\n",
+    "     \n",
+    "       \n",
+    "       \n",
     "   \n",
     "   \n",
     "   \n",
@@ -102,6 +120,59 @@
     "您猜中了,答案是34\n",
     "您總共猜了3次\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "要再小一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再小一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再小一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "要再大一點\n",
+      "恭喜答對\n"
+     ]
+    }
+   ],
+   "source": [
+    "#猜數字\n",
+    "import random\n",
+    "ans = random.randint(1,100)\n",
+    "guess = 0\n",
+    "while guess != ans:\n",
+    "    guess = int(input(\"請猜測一個1-100間的數字 : \"))\n",
+    "    if guess > ans:\n",
+    "        print(\"要再小一點\")\n",
+    "    elif guess < ans:\n",
+    "        print(\"要再大一點\")\n",
+    "    else:\n",
+    "        print(\"恭喜答對\")"
    ]
   }
  ],
