--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -174,6 +174,42 @@
     "    else:\n",
     "        print(\"恭喜答對\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "請輸入要猜的數字，在 1 到 100 之間\n",
+      "猜到了\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "answer = random.randint(1,100)\n",
+    "print(answer)\n",
+    "l=1\n",
+    "h=100\n",
+    "b = True\n",
+    "while (b):\n",
+    "    print(\"請輸入要猜的數字，在\", l , \"到\",h ,\"之間\")\n",
+    "    guess  =  int(input())\n",
+    "    if(answer == guess):\n",
+    "        print(\"猜到了\")\n",
+    "        b= False\n",
+    "    elif(answer< guess):\n",
+    "        print(\"猜錯了，比較小\")\n",
+    "        h = guess\n",
+    "    elif(answer>guess):\n",
+    "        print(\"猜錯了，比較大\")\n",
+    "        l = guess"
+   ]
   }
  ],
  "metadata": {
