--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -177,38 +177,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
       "請輸入要猜的數字，在 1 到 100 之間\n",
-      "猜到了\n"
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 100 到 100 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 100 到 30 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 100 到 40 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 100 到 30 之間\n",
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 60 到 30 之間\n",
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 55 到 30 之間\n",
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 45 到 30 之間\n",
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 46 到 30 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 32 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 32 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 35 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 36 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 38 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 37 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 46 到 36 之間\n",
+      "猜錯了豬頭，比較小一點\n",
+      "請輸入要猜的數字，在 45 到 36 之間\n",
+      "猜到了\n",
+      "請輸入要猜的數字，在 45 到 False 之間\n",
+      "猜錯了咕咕雞，比較大一點\n",
+      "請輸入要猜的數字，在 45 到 43 之間\n",
+      "猜到了\n",
+      "請輸入要猜的數字，在 45 到 False 之間\n",
+      "猜到了\n",
+      "請輸入要猜的數字，在 45 到 False 之間\n",
+      "猜到了\n",
+      "請輸入要猜的數字，在 45 到 False 之間\n"
      ]
     }
    ],
    "source": [
     "import random\n",
-    "answer = random.randint(1,100)\n",
-    "print(answer)\n",
-    "l=1\n",
-    "h=100\n",
-    "b = True\n",
-    "while (b):\n",
-    "    print(\"請輸入要猜的數字，在\", l , \"到\",h ,\"之間\")\n",
+    "target = random.randint(1,100)\n",
+    "a=1\n",
+    "b=100\n",
+    "count = 0\n",
+    "while (True):\n",
+    "    print(\"請輸入要猜的數字，在\", a , \"到\",b ,\"之間\")\n",
     "    guess  =  int(input())\n",
-    "    if(answer == guess):\n",
+    "    if(target == guess):\n",
     "        print(\"猜到了\")\n",
-    "        b= False\n",
-    "    elif(answer< guess):\n",
-    "        print(\"猜錯了，比較小\")\n",
-    "        h = guess\n",
-    "    elif(answer>guess):\n",
-    "        print(\"猜錯了，比較大\")\n",
-    "        l = guess"
+    "        break\n",
+    "        \n",
+    "    elif(target < guess):\n",
+    "        print(\"猜錯了豬頭，比較小一點\")\n",
+    "        a = guess\n",
+    "    elif(target > guess):\n",
+    "        print(\"猜錯了咕咕雞，比較大一點\")\n",
+    "        b = guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "因數 1\n",
+      "因數 2\n",
+      "因數 4\n",
+      "因數 5\n",
+      "因數 10\n",
+      "因數 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#求所有的因數\n",
+    "num = int(input(\"請輸入整數，求所有因數:\"))\n",
+    "x=1\n",
+    "while x<=num+1:\n",
+    "    if num%x==0:\n",
+    "        print('因數',x)\n",
+    "        x+=1\n",
+    "        continue\n",
+    "    else:\n",
+    "        x=x+1\n",
+    "        continue"
    ]
   }
  ],
