--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -86,40 +86,7 @@
     "print(\"===============猜數字遊戲=================:\\n\")\n",
     "while(True):\n",
     "   keyin = input(f\"猜數字範圍{min}~{max}\")\n",
-    "   min += 1\n",
-    "   max += 100\n",
-    "  \n",
-    "    try:\n",
-    "     count < target:\n",
-    "          count=input(\"再小一點,您已經猜了1次\")\n",
-    "     \n",
-    "       \n",
-    "       \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "例如:\n",
-    "\n",
-    "要猜的數值是:34\n",
-    "\n",
-    "猜數字範圍1~100:50\n",
-    "提示:\n",
-    "再小一點\n",
-    "您已經猜了1次\n",
-    "\n",
-    "猜數字範圍1~49:10\n",
-    "提示:\n",
-    "再大一點\n",
-    "您已經猜了2次\n",
-    "猜數字範圍11~49:34\n",
-    "\n",
-    "您猜中了,答案是34\n",
-    "您總共猜了3次\n",
-    "\n"
+    "    \n"
    ]
   },
   {
@@ -177,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,48 +152,24 @@
      "output_type": "stream",
      "text": [
       "請輸入要猜的數字，在 1 到 100 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 100 到 100 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 100 到 30 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 100 到 40 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 100 到 30 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 60 到 30 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 55 到 30 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 45 到 30 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 46 到 30 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 32 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 32 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 35 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 36 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 38 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 37 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 46 到 36 之間\n",
-      "猜錯了豬頭，比較小一點\n",
-      "請輸入要猜的數字，在 45 到 36 之間\n",
-      "猜到了\n",
-      "請輸入要猜的數字，在 45 到 False 之間\n",
-      "猜錯了咕咕雞，比較大一點\n",
-      "請輸入要猜的數字，在 45 到 43 之間\n",
-      "猜到了\n",
-      "請輸入要猜的數字，在 45 到 False 之間\n",
-      "猜到了\n",
-      "請輸入要猜的數字，在 45 到 False 之間\n",
-      "猜到了\n",
-      "請輸入要猜的數字，在 45 到 False 之間\n"
+      "猜到了1次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 60 到 100 之間\n",
+      "猜到了2次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 70 到 100 之間\n",
+      "猜到了3次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 80 到 100 之間\n",
+      "猜到了4次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 80 到 100 之間\n",
+      "猜到了5次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 99 到 100 之間\n",
+      "猜到了6次:\n",
+      "猜錯了豬頭，再小一點\n",
+      "請輸入要猜的數字，在 100 到 100 之間\n"
      ]
     }
    ],
@@ -240,15 +183,94 @@
     "    print(\"請輸入要猜的數字，在\", a , \"到\",b ,\"之間\")\n",
     "    guess  =  int(input())\n",
     "    if(target == guess):\n",
+    "        print(f'猜到了{count}次:')\n",
+    "        print(\"恭喜你！已經猜到了\")\n",
+    "        break\n",
+    "    elif(target < guess):\n",
+    "        count += 1\n",
+    "        print(f'猜到了{count}次:')\n",
+    "        print(\"猜錯了豬頭，再小一點\")\n",
+    "        a = guess\n",
+    "        continue\n",
+    "    elif(target > guess):\n",
+    "         count += 1\n",
+    "         print(f'猜到了{count}次:')\n",
+    "         print(\"猜錯了咕咕雞，再大一點\")\n",
+    "         b = guess\n",
+    "         continue\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入要猜的數字，在 1 到 100 之間\n",
+      "您已經猜了1 次:\n",
+      "再小一點\n",
+      "請輸入要猜的數字，在 1 到 100 之間\n",
+      "您已經猜了2 次:\n",
+      "再大一點\n",
+      "請輸入要猜的數字，在 20 到 100 之間\n",
+      "您已經猜了3 次:\n",
+      "再小一點\n",
+      "請輸入要猜的數字，在 20 到 445 之間\n",
+      "您已經猜了4 次:\n",
+      "再大一點\n",
+      "請輸入要猜的數字，在 45 到 445 之間\n",
+      "您已經猜了5 次:\n",
+      "再小一點\n",
+      "請輸入要猜的數字，在 45 到 100 之間\n",
+      "您已經猜了6 次:\n",
+      "再大一點\n",
+      "請輸入要猜的數字，在 1 到 100 之間\n",
+      "您已經猜了7 次:\n",
+      "再大一點\n",
+      "請輸入要猜的數字，在 20 到 100 之間\n",
+      "您已經猜了8 次:\n",
+      "再大一點\n",
+      "請輸入要猜的數字，在 50 到 100 之間\n",
+      "您已經猜了9 次:\n",
+      "再小一點\n",
+      "請輸入要猜的數字，在 50 到 60 之間\n",
+      "您已經猜了10 次:\n",
+      "再小一點\n",
+      "請輸入要猜的數字，在 50 到 55 之間\n",
+      "您已經猜了10 次:\n",
+      "猜到了\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "target = random.randint(1,100)\n",
+    "l=1\n",
+    "h=100\n",
+    "count = 0\n",
+    "while (True):\n",
+    "    print(\"請輸入要猜的數字，在\", l , \"到\",h ,\"之間\")\n",
+    "    keyin  =  int(input())\n",
+    "    if(target== keyin):\n",
+    "        print(f'您已經猜了{count} 次:')\n",
     "        print(\"猜到了\")\n",
     "        break\n",
-    "        \n",
-    "    elif(target < guess):\n",
-    "        print(\"猜錯了豬頭，比較小一點\")\n",
-    "        a = guess\n",
-    "    elif(target > guess):\n",
-    "        print(\"猜錯了咕咕雞，比較大一點\")\n",
-    "        b = guess"
+    "    elif(target< keyin):\n",
+    "        count+=1\n",
+    "        print(f'您已經猜了{count} 次:')\n",
+    "        print(\"再小一點\")\n",
+    "        h=keyin\n",
+    "        continue\n",
+    "    elif(target >keyin):\n",
+    "        count+=1\n",
+    "        print(f'您已經猜了{count} 次:')\n",
+    "        print(\"再大一點\")\n",
+    "        l = keyin\n",
+    "        continue"
    ]
   },
   {
