--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -86,12 +86,12 @@
     "print(\"===============猜數字遊戲=================:\\n\")\n",
     "while(True):\n",
     "   keyin = input(f\"猜數字範圍{min}~{max}\")\n",
-    "    \n"
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -99,17 +99,8 @@
      "output_type": "stream",
      "text": [
       "要再小一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
       "要再小一點\n",
-      "要再大一點\n",
+      "要再小一點\n",
       "要再大一點\n",
       "要再大一點\n",
       "要再小一點\n",
@@ -119,9 +110,6 @@
       "要再小一點\n",
       "要再小一點\n",
       "要再小一點\n",
-      "要再小一點\n",
-      "要再大一點\n",
-      "要再大一點\n",
       "要再大一點\n",
       "恭喜答對\n"
      ]
@@ -144,32 +132,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入要猜的數字，在 1 到 100 之間\n",
+      "===============猜數字遊戲=================:\n",
+      "猜數字範圍1~100: 100\n",
       "猜到了1次:\n",
       "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 60 到 100 之間\n",
+      "猜數字範圍1~100: 90\n",
       "猜到了2次:\n",
       "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 70 到 100 之間\n",
+      "猜數字範圍1~90: 56\n",
       "猜到了3次:\n",
       "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 80 到 100 之間\n",
+      "猜數字範圍1~56: 55\n",
       "猜到了4次:\n",
       "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 80 到 100 之間\n",
+      "猜數字範圍1~55: 45\n",
       "猜到了5次:\n",
-      "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 99 到 100 之間\n",
+      "猜錯了咕咕雞，再大一點\n",
+      "猜數字範圍45~55: 50\n",
       "猜到了6次:\n",
       "猜錯了豬頭，再小一點\n",
-      "請輸入要猜的數字，在 100 到 100 之間\n"
+      "猜數字範圍45~50: 49\n",
+      "猜到了6次:\n",
+      "恭喜你！已經猜到了\n"
      ]
     }
    ],
@@ -178,10 +169,12 @@
     "target = random.randint(1,100)\n",
     "a=1\n",
     "b=100\n",
-    "count = 0\n",
+    "count = 0   \n",
+    "print(\"===============猜數字遊戲=================:\")\n",
     "while (True):\n",
-    "    print(\"請輸入要猜的數字，在\", a , \"到\",b ,\"之間\")\n",
-    "    guess  =  int(input())\n",
+    "   \n",
+    "    guess  =  int(input(f\"猜數字範圍{a}~{b}\"))\n",
+    "    print(f\"猜數字範圍{a}~{b}:\",guess)\n",
     "    if(target == guess):\n",
     "        print(f'猜到了{count}次:')\n",
     "        print(\"恭喜你！已經猜到了\")\n",
@@ -190,119 +183,15 @@
     "        count += 1\n",
     "        print(f'猜到了{count}次:')\n",
     "        print(\"猜錯了豬頭，再小一點\")\n",
-    "        a = guess\n",
+    "        b = guess\n",
     "        continue\n",
     "    elif(target > guess):\n",
-    "         count += 1\n",
-    "         print(f'猜到了{count}次:')\n",
-    "         print(\"猜錯了咕咕雞，再大一點\")\n",
-    "         b = guess\n",
-    "         continue\n",
+    "        count += 1\n",
+    "        print(f'猜到了{count}次:')\n",
+    "        print(\"猜錯了咕咕雞，再大一點\")\n",
+    "        a = guess\n",
+    "        continue\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "請輸入要猜的數字，在 1 到 100 之間\n",
-      "您已經猜了1 次:\n",
-      "再小一點\n",
-      "請輸入要猜的數字，在 1 到 100 之間\n",
-      "您已經猜了2 次:\n",
-      "再大一點\n",
-      "請輸入要猜的數字，在 20 到 100 之間\n",
-      "您已經猜了3 次:\n",
-      "再小一點\n",
-      "請輸入要猜的數字，在 20 到 445 之間\n",
-      "您已經猜了4 次:\n",
-      "再大一點\n",
-      "請輸入要猜的數字，在 45 到 445 之間\n",
-      "您已經猜了5 次:\n",
-      "再小一點\n",
-      "請輸入要猜的數字，在 45 到 100 之間\n",
-      "您已經猜了6 次:\n",
-      "再大一點\n",
-      "請輸入要猜的數字，在 1 到 100 之間\n",
-      "您已經猜了7 次:\n",
-      "再大一點\n",
-      "請輸入要猜的數字，在 20 到 100 之間\n",
-      "您已經猜了8 次:\n",
-      "再大一點\n",
-      "請輸入要猜的數字，在 50 到 100 之間\n",
-      "您已經猜了9 次:\n",
-      "再小一點\n",
-      "請輸入要猜的數字，在 50 到 60 之間\n",
-      "您已經猜了10 次:\n",
-      "再小一點\n",
-      "請輸入要猜的數字，在 50 到 55 之間\n",
-      "您已經猜了10 次:\n",
-      "猜到了\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "target = random.randint(1,100)\n",
-    "l=1\n",
-    "h=100\n",
-    "count = 0\n",
-    "while (True):\n",
-    "    print(\"請輸入要猜的數字，在\", l , \"到\",h ,\"之間\")\n",
-    "    keyin  =  int(input())\n",
-    "    if(target== keyin):\n",
-    "        print(f'您已經猜了{count} 次:')\n",
-    "        print(\"猜到了\")\n",
-    "        break\n",
-    "    elif(target< keyin):\n",
-    "        count+=1\n",
-    "        print(f'您已經猜了{count} 次:')\n",
-    "        print(\"再小一點\")\n",
-    "        h=keyin\n",
-    "        continue\n",
-    "    elif(target >keyin):\n",
-    "        count+=1\n",
-    "        print(f'您已經猜了{count} 次:')\n",
-    "        print(\"再大一點\")\n",
-    "        l = keyin\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "因數 1\n",
-      "因數 2\n",
-      "因數 4\n",
-      "因數 5\n",
-      "因數 10\n",
-      "因數 20\n"
-     ]
-    }
-   ],
-   "source": [
-    "#求所有的因數\n",
-    "num = int(input(\"請輸入整數，求所有因數:\"))\n",
-    "x=1\n",
-    "while x<=num+1:\n",
-    "    if num%x==0:\n",
-    "        print('因數',x)\n",
-    "        x+=1\n",
-    "        continue\n",
-    "    else:\n",
-    "        x=x+1\n",
-    "        continue"
    ]
   }
  ],
