--- a/2023.09.11/2023.09.22_作業.ipynb
+++ b/2023.09.11/2023.09.22_作業.ipynb
@@ -34,31 +34,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入2數,求2數公因數:\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "#求公因數\n",
     "\n",
-    "import\n",
     "print(\"請輸入2數,求2數公因數:\")\n",
     "n = int(input('請輸入第1個數:'))\n",
     "m = int(input('請輸入第2個數:'))\n",
     "\n",
-    "\n",
+    "a = 0\n",
+    "if n < m :\n",
+    "    a = n\n",
+    "else:\n",
+    "    a = m\n",
+    "    for i in range(1,a+1):\n",
+    "        if n % i == 0 and m % i == 0 :\n",
+    "            print(i)\n",
+    "        else:\n",
+    "         pass\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1到100的質數是:\n",
+      "2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97,"
+     ]
+    }
+   ],
    "source": [
-    "2~100,每一個的質數\n",
-    "end = int(input(\"請輸入end值:\"))\n",
-    "print(f\"1到{end}的質數是:\")"
+    "#2~100,每一個的質數\n",
+    "a = int(input(\"請輸入end值:\"))\n",
+    "print(f\"1到{end}的質數是:\")\n",
+    "\n",
+    "for i in range(2,a+1):\n",
+    "    for c in range (2,i):\n",
+    "        if i % c == 0 and i!=c:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i,end=\",\")"
    ]
   },
   {
