--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -19,6 +19,61 @@
     "  \n",
     "sayHello()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===============猜數字遊戲=================:\n",
+      "\n",
+      "再大一點\n",
+      "您已經猜了1次\n",
+      "賓果!猜對了, 答案是:70\n",
+      "總共猜了2次\n",
+      "還要繼續嗎？(y,n)遊戲結束!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import pyinputplus as pyip\n",
+    "\n",
+    "while True:\n",
+    " min = 1\n",
+    " max = 100\n",
+    " count = 0\n",
+    " target = random.randint(min, max)\n",
+    " print(\"===============猜數字遊戲=================:\\n\")\n",
+    " while(True):\n",
+    "    \n",
+    "     count += 1\n",
+    "     keyin = int(input(f\"猜數字範圍{min}~{max}\"))\n",
+    "     if (keyin >= 1 and keyin <= max):\n",
+    "        if(keyin == target):\n",
+    "            print(f\"賓果!猜對了, 答案是:{target}\")\n",
+    "            print(f\"總共猜了{count}次\")\n",
+    "            break\n",
+    "        elif (keyin > target):\n",
+    "            print(\"再小一點\")\n",
+    "            max = keyin - 1\n",
+    "            \n",
+    "        elif (keyin < target):\n",
+    "            print(\"再大一點\")\n",
+    "            min = keyin + 1\n",
+    "            \n",
+    "        print(f\"您已經猜了{count}次\")\n",
+    "     else:\n",
+    "        print(\"請輸入提示範圍內的數字\")\n",
+    " answer = pyip.inputYesNo(prompt=\"還要繼續嗎？(y,n)\",yesVal='y',noVal='n')\n",
+    " if not (answer == 'y'):\n",
+    "    break\n",
+    "print(\"遊戲結束!\")"
+   ]
   }
  ],
  "metadata": {
