--- a/python作業總覽/2023.09.22_作業.ipynb
+++ b/python作業總覽/2023.09.22_作業.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -284,33 +284,55 @@
      "text": [
       "===============猜數字遊戲=================:\n",
       "\n",
-      "再小一點\n",
-      "您已經猜了1次\n",
-      "再小一點\n",
-      "您已經猜了2次\n",
       "再大一點\n",
-      "您已經猜了3次\n",
+      "您已經猜了0次\n",
       "再大一點\n",
-      "您已經猜了4次\n",
+      "您已經猜了0次\n",
+      "再大一點\n",
+      "您已經猜了0次\n",
       "再小一點\n",
-      "您已經猜了5次\n",
-      "賓果!猜對了, 答案是:38\n",
-      "總共猜了6次\n",
-      "遊戲結束!\n"
+      "您已經猜了0次\n",
+      "再小一點\n",
+      "您已經猜了0次\n",
+      "再大一點\n",
+      "您已經猜了0次\n",
+      "再大一點\n",
+      "您已經猜了0次\n",
+      "再小一點\n",
+      "您已經猜了0次\n",
+      "再小一點\n",
+      "您已經猜了0次\n",
+      "賓果!猜對了, 答案是:83\n",
+      "總共猜了0次\n",
+      "遊戲結束!\n",
+      "Again!\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'count' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python作業總覽/2023.09.22_作業.ipynb 儲存格 13\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m請輸入提示範圍內的數字\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m遊戲結束!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m sayAgain()\n",
+      "\u001b[1;32m/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python作業總覽/2023.09.22_作業.ipynb 儲存格 13\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msayAgain\u001b[39m ():\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAgain!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/mugen/Documents/11209_python_school/GitHub/11209-python-school/python%E4%BD%9C%E6%A5%AD%E7%B8%BD%E8%A6%BD/2023.09.22_%E4%BD%9C%E6%A5%AD.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
      ]
     }
    ],
    "source": [
     "import random\n",
+    "\n",
     "min = 1\n",
     "max = 100\n",
     "count = 0\n",
     "target = random.randint(min, max)\n",
     "print(\"===============猜數字遊戲=================:\\n\")\n",
     "while(True):\n",
-    "    count += 1\n",
-    "    keyin = int(input(f\"猜數字範圍{min}~{max}\"))\n",
-    "    if (keyin >= 1 and keyin <= max):\n",
+    "     count += 1\n",
+    "     keyin = int(input(f\"猜數字範圍{min}~{max}\"))\n",
+    "     if (keyin >= 1 and keyin <= max):\n",
     "        if(keyin == target):\n",
     "            print(f\"賓果!猜對了, 答案是:{target}\")\n",
     "            print(f\"總共猜了{count}次\")\n",
@@ -324,10 +346,11 @@
     "            min = keyin + 1\n",
     "            \n",
     "        print(f\"您已經猜了{count}次\")\n",
-    "    else:\n",
+    "     else:\n",
     "        print(\"請輸入提示範圍內的數字\")\n",
     "\n",
     "print(\"遊戲結束!\")\n",
+    "\n",
     "      \n"
    ]
   }
