--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -22,18 +22,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rect_area(width:int,height:int) -> int:\n",
+    "    return width * height #return \n",
+    "\n",
+    "area = rect_area(10,5) #呼叫\n",
+    "area  #要接收"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
+      "60\n",
       "===============猜數字遊戲=================:\n",
       "\n",
-      "賓果!猜對了, 答案是:17\n",
-      "總共猜了1次\n",
+      "再小一點\n",
+      "您已經猜了1次\n",
+      "再大一點\n",
+      "您已經猜了2次\n",
+      "賓果!猜對了, 答案是:60\n",
+      "總共猜了3次\n",
       "還要繼續嗎?(y,n)遊戲結束\n"
      ]
     }
@@ -78,13 +106,6 @@
     "print(\"遊戲結束\")\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
