--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -38,7 +38,7 @@
    ],
    "source": [
     "def rect_area(width:int,height:int) -> int:\n",
-    "    return width * height #return \n",
+    "    return width * height #return 傳出呼叫 \n",
     "\n",
     "area = rect_area(10,5) #呼叫\n",
     "area  #要接收"
