--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -38,10 +38,62 @@
    ],
    "source": [
     "def rect_area(width:int,height:int) -> int:\n",
-    "    return width * height #return 傳出呼叫 \n",
+    "    return width * height #return 傳出值生產呼叫 \n",
     "\n",
-    "area = rect_area(10,5) #呼叫\n",
+    "area = rect_area(10,5) #呼叫 \n",
     "area  #要接收"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def meun(wine:str,entree:str,dessert:str) -> None:\n",
+    "    print(f\"餐前酒：{wine}\")\n",
+    "    print(f\"主餐:{entree}\")\n",
+    "    print(f\"甜點：{dessert}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒：白酒\n",
+      "主餐:牛排\n",
+      "甜點：蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#引數位置呼叫\n",
+    "meun(\"白酒\",\"牛排\",\"蛋糕\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒：白酒\n",
+      "主餐:牛排\n",
+      "甜點：蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#引數名稱的呼叫\n",
+    "meun(wine=\"白酒\",entree=\"牛排\",dessert=\"蛋糕\")"
    ]
   },
   {
