--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "#引數位置呼叫\n",
+    "#引數位置呼叫，要依照參數的順序\n",
     "meun(\"白酒\",\"牛排\",\"蛋糕\")"
    ]
   },
@@ -94,6 +94,48 @@
    "source": [
     "#引數名稱的呼叫\n",
     "meun(wine=\"白酒\",entree=\"牛排\",dessert=\"蛋糕\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒：白酒\n",
+      "主餐:牛排\n",
+      "甜點：蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#引數名稱的呼叫，可以不依照順序\n",
+    "meun(wine=\"白酒\",dessert=\"蛋糕\",entree=\"牛排\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒：白酒\n",
+      "主餐:牛排\n",
+      "甜點：蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#引數位置和引數名稱的混合呼叫\n",
+    "#使用引數位置，後面使用引數名稱呼叫\n",
+    "#使用引數名稱，後面的引數全部都要用引數名稱\n",
+    "meun(\"白酒\",dessert=\"蛋糕\",entree=\"牛排\")\n"
    ]
   },
   {
