--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -187,6 +187,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('嫩烤蔬菜雞肉捲', '星島海南雞', '薑汁燒肉')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buffet_101(*food):\n",
+    "    print(food)\n",
+    "\n",
+    "buffet_101(\"嫩烤蔬菜雞肉捲\",\"星島海南雞\",\"薑汁燒肉\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
