--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -199,10 +199,30 @@
     }
    ],
    "source": [
-    "def buffet_101(*food):\n",
+    "def buffet_101(*food): # * 呼叫\n",
     "    print(food)\n",
     "\n",
     "buffet_101(\"嫩烤蔬菜雞肉捲\",\"星島海南雞\",\"薑汁燒肉\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'first': '大阪燒', 'second': '章魚燒', 'third': '鐵火丼', 'forth': '鹽烤香魚'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buffet_bella(**food): #沒有限定數量引數呼叫\n",
+    "    print(food)\n",
+    "buffet_bella(first=\"大阪燒\",second =\"章魚燒\",third=\"鐵火丼\",forth=\"鹽烤香魚\" )\n",
+    "    "
    ]
   },
   {
