--- a/Lesson10.ipynb
+++ b/Lesson10.ipynb
@@ -219,10 +219,27 @@
     }
    ],
    "source": [
-    "def buffet_bella(**food): #沒有限定數量引數呼叫\n",
+    "def buffet_bella(**food): # ** 沒有限定數量引數呼叫\n",
     "    print(food)\n",
     "buffet_bella(first=\"大阪燒\",second =\"章魚燒\",third=\"鐵火丼\",forth=\"鹽烤香魚\" )\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a,b,1,3,4,6,8,9.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a\",\"b\",1,3,4,6,8,9.9,sep=\",\")"
    ]
   },
   {
