--- a/Lesson11_1.ipynb
+++ b/Lesson11_1.ipynb
@@ -25,6 +25,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    pass\n",
+    "class Student: \n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -43,51 +55,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '__main__.Person'>\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "p1 = Person(name=\"robert\",isMan=False,age=25)\n",
-    "print(type(p1))\n",
-    "print(p1.weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "robert\n",
-      "25\n",
-      "False\n",
-      "None\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p1.name)\n",
-    "print(p1.age)\n",
-    "print(p1.isMan)\n",
-    "print(p1.weight)\n",
-    "print(p1.height)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -100,8 +67,11 @@
     }
    ],
    "source": [
-    "p2 = Person(\"Alice\",age=23,isMan=True,weight=70,height=170)\n",
-    "print(type(p2))"
+    "p1 = Person()\n",
+    "print(type(p1))\n",
+    "p1 .name=\"tiffany\"\n",
+    "p1.age=22\n",
+    "p1.isman=False\n"
    ]
   },
   {
@@ -113,20 +83,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice\n",
-      "23\n",
-      "True\n",
-      "70\n",
-      "170\n"
+      "tiffany\n",
+      "22\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "print(p2.name)\n",
-    "print(p2.age)\n",
-    "print(p2.isMan)\n",
-    "print(p2.weight)\n",
-    "print(p2.height)"
+    "print(p1.name)\n",
+    "print(p1.age)\n",
+    "print(p1.isman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Person'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "p2 = Person()\n",
+    "print(type(p1))\n",
+    "p2.name=\"leo\"\n",
+    "p2.age=24\n",
+    "p2.isman=False\n",
+    "p2.weight=60\n",
+    "p2.height=198"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (576286111.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    self.name=\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name:str,isman:bool,age:int):\n",
+    "        self.name=\n",
+    "class Student: \n",
+    "    pass"
    ]
   }
  ],
