--- a/python作業總覽/2023.09.28作業.ipynb
+++ b/python作業總覽/2023.09.28作業.ipynb
@@ -184,10 +184,10 @@
     "        #descript += f'骰子四:{numbers[3]}\\n'\n",
     "\n",
     "        return descript\n",
-    "if __name__ == \"__main__\":\n",
-    "    p1 = Player('AA')\n",
-    "    print(p1)\n",
-    "    print(p1.value)\n",
+    "if __name__ == \"__main__\": \n",
+    "    p1 = Player('AA')  #p1當作實體player名稱控制 \n",
+    "    print(p1)          #執行自己 self的意思就是自己p1\n",
+    "    print(p1.value)    \n",
     "\n",
     "\n",
     "    p2 = Player('BB')\n",
