--- a/python作業總覽/2023.09.28作業.ipynb
+++ b/python作業總覽/2023.09.28作業.ipynb
@@ -44,8 +44,8 @@
     "            return descript\n",
     "        \n",
     "    if __name__ == \"__main__\":\n",
-    "        p1 = Player(\"robert\")\n",
-    "        print(p1.value)\n",
+    "        p1 = Player(\"robert\")  #p1當作實體player名稱控制 \n",
+    "        print(p1.value)       #執行自己 self的意思就是自己p1\n",
     "        print(p1)\n",
     "\n",
     "        p2 = Player(\"robert\")\n",
@@ -185,8 +185,8 @@
     "\n",
     "        return descript\n",
     "if __name__ == \"__main__\": \n",
-    "    p1 = Player('AA')  #p1當作實體player名稱控制 \n",
-    "    print(p1)          #執行自己 self的意思就是自己p1\n",
+    "    p1 = Player('AA')   \n",
+    "    print(p1)         \n",
     "    print(p1.value)    \n",
     "\n",
     "\n",
