--- a/Lesson19/lesson19_1.ipynb
+++ b/Lesson19/lesson19_1.ipynb
@@ -18067,9 +18067,9 @@
    "outputs": [],
    "source": [
     "import sqlite3 #找不到就自動幫你建資料庫\n",
-    "con = sqlite3.connect(\"youbike.db\")\n",
-    "cursor = con.cursor()\n",
-    "cursor.execute(\n",
+    "def create_table(conn):\n",
+    "   cursor = conn.cursor()\n",
+    "   cursor.execute(\n",
     "    '''\n",
     "    CREATE TABLE IF NOT EXISTS  台北市(\n",
     "\t\"站點名稱\"\tTEXT NOT NULL,\n",
@@ -18084,7 +18084,9 @@
     "'''    \n",
     ")\n",
     "\n",
-    "con.commit()"
+    "conn = sqlite3.connect(\"youbike.db\")\n",
+    "create_table(conn)\n",
+    "conn.commit()  #建立一個table的動作"
    ]
   },
   {
