--- a/youbike_render/test1.ipynb
+++ b/youbike_render/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "連線成功\n",
-      "<connection object at 0x10b0c1a80; dsn: 'user=maggiechiang password=xxx dbname=maindb_xtd6 host=dpg-cl5g4qc72pts73elktn0-a.singapore-postgres.render.com port=5432', closed: 0>\n"
+      "<connection object at 0x10b0c28f0; dsn: 'user=maggiechiang password=xxx dbname=maindb_xtd6 host=dpg-cl5g4qc72pts73elktn0-a.singapore-postgres.render.com port=5432', closed: 0>\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,47 @@
     }
    ],
    "source": [
+    "sql = \"select * from 台北市youbike\"\n",
     "with conn.cursor() as cursor:\n",
-    "    cursor.execute(\"select*from 台北市youbike\")\n",
+    "    cursor.execute(sql)\n",
     "    records = cursor.fetchall()\n",
-    "    \n",
-    "    \n",
-    "print(records)    "
+    "\n",
+    "print(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1321, 'YouBike2.0_一壽橋', '文山區', '2023-11-08 10:43:18', '樟新街64號前方', 100, 100, 15), (1, 'YouBike2.0_一壽橋', '2023-11-02 16:36:03', '文山區', '樟新街64號前方', 16, 0, 16)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = '''\n",
+    "INSERT INTO 台北市youbike(站點名稱,行政區,更新時間,地址,總車輛數,可借,可還)\n",
+    "VALUES('YouBike2.0_一壽橋','文山區','2023-11-08 10:43:18','樟新街64號前方',100,100,15)\n",
+    "'''\n",
+    "with conn.cursor() as cursor:\n",
+    "    cursor.execute(sql)\n",
+    "    conn.commit()\n",
+    "\n",
+    "sql1 = '''\n",
+    "select * \n",
+    "from 台北市youbike\n",
+    "where 站點名稱 = 'YouBike2.0_一壽橋'\n",
+    "'''\n",
+    "\n",
+    "with conn.cursor() as cursor:\n",
+    "    cursor.execute(sql1)\n",
+    "    records = cursor.fetchall()\n",
+    "\n",
+    "print(records)  "
    ]
   }
  ],
