--- a/youbike_render/test1.ipynb
+++ b/youbike_render/test1.ipynb
@@ -16,9 +16,12 @@
    ],
    "source": [
     "import psycopg2\n",
+    "import password as pw\n",
     "try:\n",
-    "    conn = psycopg2.connect(database=\"maindb_xtd6\", user=\"maggiechiang\", \n",
-    "                        password=\"8sV2wuIGTQmRBtkOnsrjq0LnXfl8FY70\", host=\"dpg-cl5g4qc72pts73elktn0-a.singapore-postgres.render.com\", \n",
+    "    conn = psycopg2.connect(database=pw.DATABASE, \n",
+    "                        user=pw.USER, \n",
+    "                        password=pw.PASSWORD,\n",
+    "                        host=pw.HOST, \n",
     "                        port=\"5432\")\n",
     "except psycopg2.Error as e:\n",
     "    print(\"error\")\n",
