--- a/youbike_render/test1.ipynb
+++ b/youbike_render/test1.ipynb
@@ -88,6 +88,41 @@
     "\n",
     "print(records)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import psycopg2\n",
+    "import password as pw\n",
+    "\n",
+    "# 連線到 PostgreSQL\n",
+    "conn = psycopg2.connect(database=pw.DATABASE,\n",
+    "                        user=pw.USER, \n",
+    "                        password=pw.PASSWORD,\n",
+    "                        host=pw.HOST, \n",
+    "                        port=\"5432\"\n",
+    ")\n",
+    "cur = conn.cursor()\n",
+    "# 開啟 CSV 檔\n",
+    "with open(\"youbike.csv\", \"r\",encoding=\"UTF-8\") as csvfile:\n",
+    "\n",
+    "    # 將 CSV 檔的資料轉換為可迭代物件\n",
+    "    reader = csv.reader(csvfile, delimiter=\",\")\n",
+    "\n",
+    "    # 使用 FOR 迴圈迭代 CSV 檔的資料\n",
+    "    for row in reader:\n",
+    "            cur.execute(\"INSERT INTO 台北市youbike (站點名稱,行政區,更新時間,地址,總車輛數,可借,可還) VALUES (%s, %s, %s, %s, %s, %s, %s)\",row)\n",
+    "\n",
+    "# 提交資料\n",
+    "conn.commit()\n",
+    "\n",
+    "# 關閉連線\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
